# vox-biblios

./: (Chapter_3._Orienting_Clients_Toward_Values).txt  .env.local.example  .gitignore  README.md  Sharon-Galantino_February-2023.txt  audio_processing.py  clear_podcast_feed.py  config.env.example  config.py  cost_estimation.py  epistemic rights intelligencer  kingdon.rss  logging_utils.py  pyproject.toml  research.md  rss_utils.py  run_voxbiblios.sh  s3_utils.py  setup_voxbiblios.sh  text_processing.py  voxBiblios.ipynb  vox_biblios_main.py  voxbiblios.rss
.github/workflows/: ci.yml
.ipynb_checkpoints/: voxBiblios-checkpoint.ipynb  voxbiblios-checkpoint.rss
docs/: PRD-pocket-tts.md  S3_ALTERNATIVES_RESEARCH.md  ios-shortcut.md
poller/: README.md  com.voxbiblios.poller.plist.template  install.sh  voxbiblios_poller.py
tests/: conftest.py  fakes.py  test_control_plane.py  test_feed_cli.py  test_process_json_contract.py  test_split_parts.py  test_text_processor.py  test_tts_factory.py
vox_biblios/: __init__.py  cli.py  config.py  exceptions.py
vox_biblios/adapters/: control_plane.py  rss.py  web_scraper.py
vox_biblios/aws/: aws_client.py  polly.py  s3.py
vox_biblios/core/: podcast_manager.py  text_processor.py
vox_biblios/tts/: __init__.py  base.py  factory.py  kokoro_provider.py  pocket_tts_provider.py  polly_provider.py  say_provider.py
vox_biblios/utils/: audio.py  cost.py  logging.py
worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
worker/migrations/: 0001_init.sql  0002_seed_default_feed.sql  0003_add_tts_voice.sql  0004_add_attempts.sql
worker/public/fonts/: OFL-NOTICE.txt
worker/src/: auth.ts  db.ts  index.ts  rss.ts  ui.ts  voices.ts
