[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# the kokoro extra pins spacy's en_core_web_sm by wheel URL
allow-direct-references = true

[project]
name = "vox-biblios"
version = "0.2.1"
description = "Text-to-Podcast Generator"
requires-python = ">=3.10"
dependencies = [
    # Core dependencies
    "colorama",
    "python-dotenv",

    # AWS related
    "boto3",
    "botocore",
    "backoff",

    # Text processing
    "nltk",
    "numpy",
    "scipy",

    # Web scraping
    "goose3",
    "requests",
    "beautifulsoup4",
    "trafilatura",

    # Podcast/RSS
    "podgen",
    "xmltodict",

    # Data processing
    "pandas",

    # TTS
    "pocket-tts>=2.1.0",
]

[project.optional-dependencies]
kokoro = [
    "mlx-audio",
    "misaki[en]",
    # misaki's G2P needs this spacy model; its runtime auto-download installs
    # into the wrong environment under uv tool installs
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[project.scripts]
vox-biblios = "vox_biblios.cli:main"